# tuas_boussinesq_solver

./: Cargo.toml  README.md  patch_notes.md
examples/ciet_educational_simulator/: README.md  main.rs
examples/ciet_educational_simulator/ciet_simulator_v1/: app.rs  mod.rs
examples/ciet_educational_simulator/ciet_simulator_v1/app/: useful_functions.rs
src/lib/: control_volume_dimensions.rs  lib.rs
src/lib/array_control_vol_and_fluid_component_collections/: conductance_array_functions.rs
src/lib/array_control_vol_and_fluid_component_collections/fluid_component_collection/: collection_series_and_parallel_functions.rs  fluid_component.rs  fluid_component_collection.rs  fluid_component_super_collection.rs  mod.rs  super_collection_series_and_parallel_functions.rs
src/lib/array_control_vol_and_fluid_component_collections/one_d_fluid_array_with_lateral_coupling/: calculation.rs  constructors.rs  default.rs  lateral_connection.rs  mod.rs  postprocessing.rs  preprocessing.rs  tests.rs  type_conversion.rs
src/lib/array_control_vol_and_fluid_component_collections/one_d_solid_array_with_lateral_coupling/: calculation.rs  constructors.rs  default.rs  lateral_connection.rs  mod.rs  postprocessing.rs  preprocessing.rs
src/lib/array_control_vol_and_fluid_component_collections/one_dimension_cartesian_conducting_medium/: calculation.rs  mod.rs  postprocessing.rs  preprocessing.rs
src/lib/array_control_vol_and_fluid_component_collections/standalone_fluid_nodes/: core_fluid_node.rs  shell_fluid_node.rs
src/lib/array_control_vol_and_fluid_component_collections/standalone_solid_nodes/: core_solid_nodes.rs  shell_solid_node.rs
src/lib/boundary_conditions/: mod.rs
src/lib/boussinesq_thermophysical_properties/: density.rs  dynamic_viscosity.rs  mod.rs  momentum_diffusivity.rs  prandtl.rs  solid_material_surface_roughness.rs  specific_heat_capacity.rs  temperature_ranges.rs  thermal_conductivity.rs  thermal_diffusivity.rs  volumetric_heat_capacity.rs
src/lib/boussinesq_thermophysical_properties/liquid_database/: dowtherm_a.rs  flibe.rs  flinak.rs  hitec_nitrate_salt.rs  yd_325_heat_transfer_oil.rs
src/lib/boussinesq_thermophysical_properties/solid_database/: copper.rs  fecral.rs  fiberglass.rs  generic_heating_element.rs  mod.rs  pyrogel_hps.rs  ss_304_l.rs
src/lib/boussinesq_thermophysical_properties/specific_enthalpy/: enthalpy_data.rs  mod.rs  temperature_from_specific_enthalpy.rs
src/lib/fluid_mechanics_correlations/: churchill_friction_factor.rs  custom_fldk.rs  mod.rs  pipe_calculations.rs
src/lib/heat_transfer_correlations/: mod.rs  parallel_heat_exchangers.rs  thermal_resistance.rs
src/lib/heat_transfer_correlations/heat_transfer_interactions/: advection.rs  conductance.rs  heat_transfer_geometry.rs  heat_transfer_interaction_enums.rs  mod.rs  tests.rs
src/lib/heat_transfer_correlations/nusselt_number_correlations/: enums.rs  input_structs.rs  pipe_correlations.rs  tests.rs
src/lib/pre_built_components/: mod.rs
src/lib/pre_built_components/gfhr_pipe_tests/: mod.rs  (+3 more)
src/lib/prelude/: beta_testing.rs
src/lib/single_control_vol/: calculation.rs  interaction_between_two_cvs.rs  mod.rs  preprocessing.rs  wrappers_for_heat_transfer_interaction.rs
src/lib/tuas_lib_error/: mod.rs
(+253 files in other folders)
