[package]
name = "tuas_boussinesq_solver"
version = "0.0.4"
edition = "2021"
license = "GPL-3.0"
description = "Thermo-hydraulic Uniphase Solver for Advection and Convection in Salt Flows (TUAS)"
homepage = "https://github.com/theodoreOnzGit/tuas_boussinesq_solver"
repository ="https://github.com/theodoreOnzGit/tuas_boussinesq_solver"
readme = "README.md"
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
csv = "1.3.0"
ndarray = "0.15.6"
peroxide = "0.37.9"
roots = "0.0.8"
thiserror = "1.0.64"
uom = "0.36.0"

[target.'cfg(windows)'.dependencies]
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }

[target.'cfg(macos)'.dependencies]
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl-static"] }

[target.'cfg(unix)'.dependencies]
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }

[lib]
name = "tuas_boussinesq_solver"
path = "src/lib/lib.rs"


[dev-dependencies]
# the natural circulation loop requires a PID controller
chem-eng-real-time-process-control-simulator = "0.0.5"
